image template update to stop text everflow and wrap underneath the image. Callout style sheet update to reduce whitespace of title in mobile and fix image sizing issues.

--- a/style/callout.css
+++ b/style/callout.css
@@ -12,9 +12,12 @@
 }
 
 .callout .icon {
-    width:auto; 
-    height:100%;
+    width:48px; 
+    height:48px;
     margin-right: .5rem;
+    margin-bottom: -5px;
+    margin-top: -7px;
+    margin-left: -5px;
 }
 
 .callout-yellow {
@@ -53,3 +56,16 @@
 .callout-aqua h2 {
     color: #ffffff;
 }
+
+.carousel {
+    background-color: hsla(0, 0%, 2%, 0.24);
+    position:relative;
+  }
+
+  figure.img-thumbnail figcaption.figure-caption {
+    display:table-caption;
+    caption-side: bottom;
+    background-color: #dee2e6;
+    padding-bottom: .5rem;
+    color: #3d4042;
+  }
