--- a/style/carousel.css
+++ b/style/carousel.css
@@ -1,5 +1,5 @@
 .carousel {
-    background-color: #040404;
+    background-color: #0404043d;
     position:relative;
   }
   
